# docassemble-BankruptcyClinic

./: .gitignore  CLAUDE.md  COMPREHENSIVE_TEST_RESULTS.md  INTEGRATION_COMPLETE.md  ISSUE-RESOLUTION-PLAN.md  LICENSE  MANIFEST.in  MASTER_PLAN.md  MCP_INTEGRATION.md  PERFORMANCE_OPTIMIZATION_RESULTS.md  PLAYWRIGHT_SETUP_COMPLETE.md  README.md  SETUP_CLEANUP.md  TESTING_STRATEGY.md  TESTING_SUCCESS_SUMMARY.md  create_b2030_fillable.py  deploy.sh  package-lock.json  package.json  playwright.config.ts  prompt.md  pyproject.toml  setup.py  test-output.txt  tsconfig.json
.github/: dependabot.yml
.serena/: project.yml
docs/: .gitignore  RESOLVED.md  _config.yml  index.md
playwright-report/: index.html
scripts/: caps-sync-baseline.txt  deploy-prod.sh  form-variables-baseline.txt  form_pdf_field_check.py  form_variable_manifest.py  fuzz-sweep.sh  interview_dependency_check.py  interview_graph.py  lint-flow-gaps.sh  lint-pdf-fields.sh  lint-test-completeness.sh  lint-test-selectors.sh  lint_caps_sync.py  mutation-test-gates.sh  notify.sh  pdf-field-baseline.txt  scan_prod_logs.sh  test-completeness-baseline.txt  test-container-pool.sh  yaml-question-ids-snapshot.sh
test-results/: .last-run.json  results.xml
tests/: Human-written flow.spec.ts  README.md  amended-filing-test.spec.ts  assert-helpers.ts  branch-matrix.spec.ts  complete-interview-flow.spec.ts  comprehensive-e2e.spec.ts  comprehensive-flow.spec.ts  comprehensive-golden-flow.spec.ts  creditor-library.spec.ts  creditor-picker-delete-all.spec.ts  cross-validation-demo.spec.ts  cross-validation.spec.ts  (+75 more)
(+112 files in other folders)
