[build-system]
requires = [
    "setuptools==82.0.1",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.BankruptcyClinic"
version = "0.0.27"
description = "A docassemble extension."
readme = "README.md"
authors = [
    { name = "Alex Clark", email = "alex@clarkmanagementconsulting.com" },
]
dependencies = []

[project.urls]
Homepage = "https://docassemble.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
